test/loop/confidence/errors/module_errors_4.loop
# Errors in pattern matching functions

module

